added logic for algorithm compile & deploy

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reputation-cli",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "npx tsc",
-    "install:local": "sudo npm uninstall -g reputation-cli && yarn build && sudo npm install -g .",
+    "install:local": "sudo npm uninstall -g reputation-cli && npm run build && sudo npm install -g .",
     "dev": "npx tsc && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,38 +28,76 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@polkadot/keyring": "12.6.2",
-    "@truenetworkio/sdk": "file:.yalc/@truenetworkio/sdk",
+    "@truenetworkio/sdk": "^0.0.9",
     "child_process": "^1.0.2",
     "commander": "^12.0.0",
     "fs": "^0.0.1-security",
     "loading-cli": "^1.1.2",
     "path": "^0.12.7",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "util": "^0.12.5"
   },
   "resolutions": {
-    "@polkadot/api": "^8.3.1",
-    "@polkadot/api-augment": "^8.3.1",
-    "@polkadot/api-base": "^8.3.1",
-    "@polkadot/api-contract": "^8.3.1",
-    "@polkadot/api-derive": "^8.3.1",
-    "@polkadot/hw-ledger": "^9.1.1",
-    "@polkadot/keyring": "^9.1.1",
-    "@polkadot/networks": "^9.1.1",
-    "@polkadot/phishing": "^0.12.1",
-    "@polkadot/rpc-augment": "^8.3.1",
-    "@polkadot/rpc-core": "^8.3.1",
-    "@polkadot/rpc-provider": "^8.3.1",
-    "@polkadot/types": "^8.3.1",
-    "@polkadot/types-augment": "^8.3.1",
-    "@polkadot/types-codec": "^8.3.1",
-    "@polkadot/types-create": "^8.3.1",
-    "@polkadot/types-known": "^8.3.1",
-    "@polkadot/types-support": "^8.3.1",
-    "@polkadot/util": "^9.1.1",
-    "@polkadot/util-crypto": "^9.1.1",
-    "@polkadot/wasm-crypto": "^6.0.1",
-    "typescript": "^4.6.4"
+    "@polkadot/api": "13.2.1",
+    "@polkadot/api-augment": "13.2.1",
+    "@polkadot/api-base": "13.2.1",
+    "@polkadot/api-contract": "13.2.1",
+    "@polkadot/api-derive": "13.2.1",
+    "@polkadot/hw-ledger": "13.1.1",
+    "@polkadot/keyring": "13.1.1",
+    "@polkadot/networks": "13.1.1",
+    "@polkadot/phishing": "0.23.6",
+    "@polkadot/rpc-augment": "13.2.1",
+    "@polkadot/rpc-core": "13.2.1",
+    "@polkadot/rpc-provider": "13.2.1",
+    "@polkadot/types": "13.2.1",
+    "@polkadot/types-augment": "13.2.1",
+    "@polkadot/types-codec": "13.2.1",
+    "@polkadot/types-create": "13.2.1",
+    "@polkadot/types-known": "13.2.1",
+    "@polkadot/types-support": "13.2.1",
+    "@polkadot/util": "13.1.1",
+    "@polkadot/util-crypto": "13.1.1",
+    "@polkadot/wasm-crypto": "7.3.2",
+    "@polkadot/x-bigint": "13.1.1",
+    "@polkadot/x-fetch": "13.1.1",
+    "@polkadot/x-global": "13.1.1",
+    "@polkadot/x-randomvalues": "13.1.1",
+    "@polkadot/x-textdecoder": "13.1.1",
+    "@polkadot/x-textencoder": "13.1.1",
+    "@polkadot/x-ws": "13.1.1",
+    "typescript": "5.6.3"
+  },
+  "overrides": {
+    "@polkadot/api": "13.2.1",
+    "@polkadot/api-augment": "13.2.1",
+    "@polkadot/api-base": "13.2.1",
+    "@polkadot/api-contract": "13.2.1",
+    "@polkadot/api-derive": "13.2.1",
+    "@polkadot/hw-ledger": "13.1.1",
+    "@polkadot/keyring": "13.1.1",
+    "@polkadot/networks": "13.1.1",
+    "@polkadot/phishing": "0.23.6",
+    "@polkadot/rpc-augment": "13.2.1",
+    "@polkadot/rpc-core": "13.2.1",
+    "@polkadot/rpc-provider": "13.2.1",
+    "@polkadot/types": "13.2.1",
+    "@polkadot/types-augment": "13.2.1",
+    "@polkadot/types-codec": "13.2.1",
+    "@polkadot/types-create": "13.2.1",
+    "@polkadot/types-known": "13.2.1",
+    "@polkadot/types-support": "13.2.1",
+    "@polkadot/util": "13.1.1",
+    "@polkadot/util-crypto": "13.1.1",
+    "@polkadot/wasm-crypto": "7.3.2",
+    "@polkadot/x-bigint": "13.1.1",
+    "@polkadot/x-fetch": "13.1.1",
+    "@polkadot/x-global": "13.1.1",
+    "@polkadot/x-randomvalues": "13.1.1",
+    "@polkadot/x-textdecoder": "13.1.1",
+    "@polkadot/x-textencoder": "13.1.1",
+    "@polkadot/x-ws": "13.1.1",
+    "typescript": "^5.6.3"
   },
   "type": "module"
 }
