--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@truenetworkio/sdk": "^0.0.9",
+    "@polkadot/keyring": "13.1.1",
     "child_process": "^1.0.2",
     "commander": "^12.0.0",
     "fs": "^0.0.1-security",
