--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "@polkadot/api": "13.2.1",
     "@polkadot/keyring": "13.1.1",
+    "@polkadot/util": "13.1.1",
+    "@polkadot/util-crypto": "13.1.1",
     "@truenetworkio/sdk": "^0.0.9",
     "chalk": "^4.1.2",
     "child_process": "^1.0.2",
