--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "reputation-cli",
-  "version": "0.0.12",
+  "version": "0.0.14",
   "description": "",
   "main": "index.js",
+  "type": "module",
+  "sideEffects": false,
   "bin": {
     "reputation-cli": "./dist/index.js"
   },
   "scripts": {
     "build": "npx tsc",
-    "install:local": "sudo npm uninstall -g reputation-cli && npm run build && sudo npm install -g .",
+    "install:local": "sudo npm uninstall -g reputation-cli && npm i && npm run build && sudo npm install -g .",
     "dev": "npx tsc && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,11 +25,9 @@
     "@types/shelljs": "^0.8.15"
   },
   "dependencies": {
-    "@truenetworkio/sdk": "^0.0.14",
     "@polkadot/api": "13.2.1",
-    "@polkadot/keyring": "13.1.1",
-    "@polkadot/util": "13.1.1",
     "@polkadot/util-crypto": "13.1.1",
+    "@truenetworkio/sdk": "^0.0.17",
     "chalk": "^4.1.2",
     "child_process": "^1.0.2",
     "commander": "^12.0.0",
@@ -41,37 +41,6 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "util": "^0.12.5"
-  },
-  "resolutions": {
-    "@polkadot/api": "13.2.1",
-    "@polkadot/api-augment": "13.2.1",
-    "@polkadot/api-base": "13.2.1",
-    "@polkadot/api-contract": "13.2.1",
-    "@polkadot/api-derive": "13.2.1",
-    "@polkadot/hw-ledger": "13.1.1",
-    "@polkadot/keyring": "13.1.1",
-    "@polkadot/networks": "13.1.1",
-    "@polkadot/phishing": "0.23.6",
-    "@polkadot/rpc-augment": "13.2.1",
-    "@polkadot/rpc-core": "13.2.1",
-    "@polkadot/rpc-provider": "13.2.1",
-    "@polkadot/types": "13.2.1",
-    "@polkadot/types-augment": "13.2.1",
-    "@polkadot/types-codec": "13.2.1",
-    "@polkadot/types-create": "13.2.1",
-    "@polkadot/types-known": "13.2.1",
-    "@polkadot/types-support": "13.2.1",
-    "@polkadot/util": "13.1.1",
-    "@polkadot/util-crypto": "13.1.1",
-    "@polkadot/wasm-crypto": "7.3.2",
-    "@polkadot/x-bigint": "13.1.1",
-    "@polkadot/x-fetch": "13.1.1",
-    "@polkadot/x-global": "13.1.1",
-    "@polkadot/x-randomvalues": "13.1.1",
-    "@polkadot/x-textdecoder": "13.1.1",
-    "@polkadot/x-textencoder": "13.1.1",
-    "@polkadot/x-ws": "13.1.1",
-    "typescript": "5.6.3"
   },
   "overrides": {
     "@polkadot/api": "13.2.1",
@@ -101,8 +70,36 @@
     "@polkadot/x-randomvalues": "13.1.1",
     "@polkadot/x-textdecoder": "13.1.1",
     "@polkadot/x-textencoder": "13.1.1",
-    "@polkadot/x-ws": "13.1.1",
-    "typescript": "^5.6.3"
+    "@polkadot/x-ws": "13.1.1"
   },
-  "type": "module"
+  "resolutions": {
+    "@polkadot/api": "13.2.1",
+    "@polkadot/api-augment": "13.2.1",
+    "@polkadot/api-base": "13.2.1",
+    "@polkadot/api-contract": "13.2.1",
+    "@polkadot/api-derive": "13.2.1",
+    "@polkadot/hw-ledger": "13.1.1",
+    "@polkadot/keyring": "13.1.1",
+    "@polkadot/networks": "13.1.1",
+    "@polkadot/phishing": "0.23.6",
+    "@polkadot/rpc-augment": "13.2.1",
+    "@polkadot/rpc-core": "13.2.1",
+    "@polkadot/rpc-provider": "13.2.1",
+    "@polkadot/types": "13.2.1",
+    "@polkadot/types-augment": "13.2.1",
+    "@polkadot/types-codec": "13.2.1",
+    "@polkadot/types-create": "13.2.1",
+    "@polkadot/types-known": "13.2.1",
+    "@polkadot/types-support": "13.2.1",
+    "@polkadot/util": "13.1.1",
+    "@polkadot/util-crypto": "13.1.1",
+    "@polkadot/wasm-crypto": "7.3.2",
+    "@polkadot/x-bigint": "13.1.1",
+    "@polkadot/x-fetch": "13.1.1",
+    "@polkadot/x-global": "13.1.1",
+    "@polkadot/x-randomvalues": "13.1.1",
+    "@polkadot/x-textdecoder": "13.1.1",
+    "@polkadot/x-textencoder": "13.1.1",
+    "@polkadot/x-ws": "13.1.1"
+  }
 }
